Actions
Bug #9886
closedlibresolv2: fix fallthrough in ns_sprintrrf()
Start date:
2018-10-11
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:
Description
As part of
9135 libresolv2: this statement may fall through
fallthrough statements were added to ns_sprintrrf(). However, from inspection, it's clear
that they are in fact missing "break"s.
Updated by Electric Monk almost 5 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit a5d83f5b2c771c419ad216ce0358fbeee032fc32
commit a5d83f5b2c771c419ad216ce0358fbeee032fc32 Author: John Levon <john.levon@joyent.com> Date: 2018-10-11T21:27:23.000Z 9886 libresolv2: fix fallthrough in ns_sprintrrf() Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Igor Kozhukhov <igor@dilos.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions